--- a/bower.json
+++ b/bower.json
@@ -5,17 +5,17 @@
   "license": "MIT",
   "main": "src/tomalec-ace-editor.html",
   "keywords": [
-    "web-components"
+    "web-components",
+    "ace",
+    "code-editor"
   ],
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components"
+    "bower_components",
+    "preview.png"
   ],
   "dependencies": {
     "platform": "Polymer/platform#~0.3.1"
-  },
-  "devDependencies": {
-    "x-html": "Juicy/juicy-html#master"
   }
 }
