--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "tomalec-ace-editor",
+  "name": "juicy-ace-editor",
   "version": "0.0.0",
   "description": "Custom Element with Ace(http://ace.c9.io/) code editor",
   "license": "MIT",
-  "main": "src/tomalec-ace-editor.html",
+  "main": "src/juicy-ace-editor.html",
   "keywords": [
     "web-components",
     "ace",
@@ -17,5 +17,9 @@
   ],
   "dependencies": {
     "platform": "Polymer/platform#~0.3.1"
-  }
+  },
+  "homepage": "https://github.com/Juicy/juicy-ace-editor",
+  "authors": [
+    "Tomek Wytrebowicz <tomalecpub@gmail.com>"
+  ]
 }
