--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-    "private": true,
-    "devDependencies": {
-        "grunt": "~0.4.1",
-        "grunt-cli": "~0.1.9",
-        "grunt-contrib-connect": "~0.5.0",
-    	"grunt-contrib-watch": "~0.6.1"
-    }
+	"version": "0.0.3",
+	"private": true,
+	"devDependencies": {
+		"grunt": "^0.4.5",
+		"grunt-bump": "^0.3.0",
+		"grunt-cli": "~0.1.9",
+		"grunt-contrib-connect": "~0.5.0",
+		"grunt-contrib-watch": "~0.6.1"
+	}
 }
