--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "img"
   ],
   "dependencies": {
-    "platform": "Polymer/platform#^0.4.0"
+    "webcomponentsjs": "~0.6.0"
   },
   "homepage": "https://github.com/Juicy/juicy-ace-editor",
   "authors": [
