--- a/bower.json
+++ b/bower.json
@@ -23,5 +23,8 @@
   "homepage": "https://github.com/Juicy/juicy-ace-editor",
   "authors": [
     "Tomek Wytrebowicz <tomalecpub@gmail.com>"
-  ]
+  ],
+  "devDependencies": {
+    "polymer": "~0.5.0"
+  }
 }
