Switch to Custom Elements v1 API
Juicy/juicy-ace-editor/issues/22
Starcounter/RebelsLounge/issues/74

--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "Tomek Wytrebowicz <tomalecpub@gmail.com>"
   ],
   "devDependencies": {
-    "polymer": "*"
+    "polymer": "*",
+    "document-register-element": "^1.3.0"
   }
 }
