--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "img"
   ],
   "dependencies": {
-    "webcomponentsjs": "~0.7.10",
+    "webcomponentsjs": "^1.0.0",
     "ace-builds": "~1.2.0"
   },
   "homepage": "https://github.com/Juicy/juicy-ace-editor",
