--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
   ],
   "devDependencies": {
     "polymer": "*",
-    "document-register-element": "^1.3.0"
+    "web-component-tester": "^6.0.1",
+    "document-register-element": "^1.7.0"
   }
 }
