--- a/package.json
+++ b/package.json
@@ -1,11 +1,28 @@
 {
-	"version": "2.0.4",
-	"private": true,
-	"devDependencies": {
-		"grunt": "^0.4.5",
-		"grunt-bump": "^0.3.0",
-		"grunt-cli": "~0.1.9",
-		"grunt-contrib-connect": "~0.5.0",
-		"grunt-contrib-watch": "~0.6.1"
-	}
+  "name": "juicy-ace-editor",
+  "description": "Custom Element wrapper for Ace code editor",
+  "version": "2.0.4",
+  "author": "Juicy",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Juicy/juicy-ace-editor/issues"
+  },
+  "homepage": "https://github.com/Juicy/juicy-ace-editor#readme",  
+  "scripts": {
+    "test": "wct"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Juicy/juicy-ace-editor.git"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-bump": "^0.3.0",
+    "grunt-cli": "~0.1.9",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-watch": "~0.6.1"
+  }
 }
