--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "grunt-cli": "~0.1.9",
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1"
+  },
+  "dependencies": {
+    "ace-builds": "^1.2.9"
   }
 }
