--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "grunt-bump": "^0.3.0",
     "grunt-cli": "~0.1.9",
     "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "web-component-tester": "^6.5.0"
   },
   "dependencies": {
-    "ace-builds": "^1.2.9",
-    "web-component-tester": "^6.6.0-pre.5"
+    "ace-builds": "^1.2.9"
   }
 }
