--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,7 @@ language: node_js
 sudo: required
 dist: trusty
 before_script:
-  - npm install web-component-tester
-  - npm install bower
   - 'export PATH=$PWD/node_modules/.bin:$PATH'
-  - bower install
 node_js: 8
 addons:
   firefox: latest
@@ -15,5 +12,5 @@ addons:
     packages:
       - google-chrome-stable
 script:
-  - xvfb-run wct --skip-plugin sauce
+  - xvfb-run npm test
   - "if [ \"${TRAVIS_PULL_REQUEST}\" = \"false\" ]; then wct --skip-plugin local --plugin sauce; fi"
