--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "grunt-cli": "~0.1.9",
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1",
-    "web-component-tester": "^6.5.0"
+    "web-component-tester": "^6.6.0-pre.5"
   },
   "dependencies": {
     "ace-builds": "^1.2.9"
