add html file back

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/Juicy/juicy-ace-editor/issues"
   },
   "homepage": "https://github.com/Juicy/juicy-ace-editor#readme",
-  "main": "./juicy-ace-editor.js",
+  "main": "./juicy-ace-editor-module.js",
   "scripts": {
     "test": "wct --npm --module-resolution=node"
   },
