--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,6 @@
   ],
   "devDependencies": {
     "polymer": "*",
-    "web-component-tester": "^6.0.1",
-    "document-register-element": "^1.7.0"
+    "web-component-tester": "^6.0.1"
   }
 }
