--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
   ],
   "dependencies": {
     "webcomponentsjs": "^1.0.0",
-    "ace-builds": "~1.2.0"
+    "ace-builds": "^1.3.0"
   },
   "homepage": "https://github.com/Juicy/juicy-ace-editor",
   "authors": [
