--- a/bower.json
+++ b/bower.json
@@ -18,14 +18,14 @@
   ],
   "dependencies": {
     "webcomponentsjs": "^1.0.0",
-    "ace-builds": "^1.3.0"
+    "ace-builds": "^1.3.3"
   },
   "homepage": "https://github.com/Juicy/juicy-ace-editor",
   "authors": [
     "Tomek Wytrebowicz <tomalecpub@gmail.com>"
   ],
   "devDependencies": {
-    "polymer": "*",
+    "polymer": "^2.6.0",
     "web-component-tester": "^6.0.1"
   }
 }
